<resources>
    <string name="app_name">ShoppingList</string>

    <string name="activity_add_product">Add product</string>
    <string name="activity_main">Shopping list</string>
    <string name="add_product">Add product</string>
    <string name="add_product_background">Add product background</string>
    <string name="add_product_name">product name</string>
    <string name="add_product_priority">priority</string>
    <string name="add_product_quantity">product quantity</string>
    <string name="background_color">background color</string>
    <string name="background_transparency">background transparency:</string>
    <string name="bold_product_name">bold product name</string>
    <string name="cancel">cancel</string>
    <string name="color">color</string>
    <string name="color_set_fresh">Fresh</string>
    <string name="color_set_magnolia">Magnolia</string>
    <string name="color_set_sea">Sea</string>
    <string name="copy_landscape_background">copy landscape background</string>
    <string name="copy_portrait_background">copy portrait background</string>
    <string name="create_theme">Create theme</string>
    <string name="create_theme_lowercase">create theme</string>
    <string name="delete_icon">delete icon:</string>
    <string name="delete_icon_color">delete icon color</string>
    <string name="delete_product_question">Do you want to delete this product?</string>
    <string name="delete_theme_question">Do you want to delete this theme?</string>
    <string name="empty_theme_name">Theme name can not be empty</string>
    <string name="error_message">Something went wrong. Try again</string>
    <string name="hint">hint</string>
    <string name="hint_color">hint color</string>
    <string name="hint_transparency">hint transparency</string>
    <string name="image">image</string>
    <string name="label">label</string>
    <string name="label_color">label color</string>
    <string name="landscape">landscape</string>
    <string name="line_color">line color</string>
    <string name="themes">Themes</string>
    <string name="no">NO</string>
    <string name="nothing_to_keep">New theme has no changes</string>
    <string name="priority_can_not_be_empty">Priority can not be empty</string>
    <string name="product_list_background">Product list background</string>
    <string name="product_name_can_not_be_empty">Product name can not be empty</string>
    <string name="product_priority">priority:</string>
    <string name="product_quantity">quantity:</string>
    <string name="portrait">portrait</string>
    <string name="remove_background">remove background</string>
    <string name="save">save</string>
    <string name="select_background_color">select background color:</string>
    <string name="select_background_type">select background type:</string>
    <string name="select_color_set">Select color set</string>
    <string name="text">text</string>
    <string name="text_color">text color</string>
    <string name="theme_christmas">Christmas</string>
    <string name="theme_fashion">Fashion</string>
    <string name="theme_grocery">Grocery</string>
    <string name="theme_marketplace">Marketplace</string>
    <string name="theme_name">Theme name</string>
    <string name="yes">YES</string>
</resources>