<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/confirmation_dialog_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/delete_product_question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation_dialog_question">

        <Button
            android:id="@+id/confirmation_dialog_question_confirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/confirmation_dialog_question_decline"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/no"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>