<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_theme_third_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_theme_edit_text_visualization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintBottom_toTopOf="@+id/create_theme_color_section"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/create_theme_edit_text_visualization_add_product_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:enabled="false"
                android:padding="8dp"
                android:text="@string/text"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/create_theme_edit_text_visualization_add_product_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_theme_edit_text_visualization_add_product_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_theme_hint_visualization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toTopOf="@+id/create_theme_color_section"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/create_theme_hint_visualization_add_product_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:padding="8dp"
                android:text="@string/hint"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/create_theme_hint_visualization_add_product_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/label"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_theme_hint_visualization_add_product_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_theme_color_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/transparent_black"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingTop="30dp"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/create_theme_color_pickers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.shoppinglist.control.ImageColorPicker
                    android:id="@+id/create_theme_add_product_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:elementType="add_product_text_color"
                    app:label="@string/text_color"
                    app:labelColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/create_theme_add_product_label_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.example.shoppinglist.control.ImageColorPicker
                    android:id="@+id/create_theme_add_product_label_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:elementType="add_product_label_color"
                    app:label="@string/label_color"
                    app:labelColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/create_theme_add_product_text_color"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.example.shoppinglist.control.ImageColorPicker
                    android:id="@+id/create_theme_add_product_hint_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    app:elementType="add_product_hint_color"
                    app:label="@string/hint_color"
                    app:labelColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/create_theme_add_product_line_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_theme_add_product_text_color" />

                <com.example.shoppinglist.control.ImageColorPicker
                    android:id="@+id/create_theme_add_product_line_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    app:elementType="add_product_line_color"
                    app:label="@string/line_color"
                    app:labelColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/create_theme_add_product_hint_color"
                    app:layout_constraintTop_toBottomOf="@id/create_theme_add_product_label_color" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/create_theme_add_product_hint_transparency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="50dp"
                android:text="@string/hint_transparency"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/create_theme_add_product_hint_transparency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_theme_color_pickers" />

            <com.google.android.material.slider.Slider
                android:id="@+id/create_theme_add_product_hint_transparency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:valueFrom="0f"
                android:valueTo="1f"
                app:labelBehavior="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_theme_add_product_hint_transparency_label" />


            <include
                layout="@layout/step_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_theme_add_product_hint_transparency" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>